fix bug Error404 not centered

--- a/src/styles/_error.scss
+++ b/src/styles/_error.scss
@@ -2,6 +2,13 @@ body{
     color: $primary-color;
 }
 
+.body-wrapper{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
 .main-Wrapper{
     display: flex;
     flex-direction: column;
